2012-02-06  Nick Clifton  <nickc@redhat.com>

	* po/sr.po: New Serbian translation.
	* configure.in (ALL_LINGUAS): Add sr.
	* configure: Regenerate.

For older changes see ChangeLog-2011

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: