@@ -1,3 +1,8 @@
+2012-03-06  Tristan Gingold  <gingold@adacore.com>
+
+	* corefile.c (core_create_function_syms): Do not call bsearch if
+	symbol_map_count is 0.
+
 2012-02-06  Nick Clifton  <nickc@redhat.com>
 
 	* po/sr.po: New Serbian translation.
